--- a/src/styling/card.css
+++ b/src/styling/card.css
@@ -1,5 +1,14 @@
 .card {
   display: flex;
-  justify-content: center;
-  padding-bottom: 50px;
+  flex-direction: row;
+  flex-wrap: wrap;
+  padding: 30px;
+}
+
+.card-image:hover {
+  box-shadow: -4px -7px 20px 10px white;
+}
+
+.card-image {
+  box-shadow: -4px -7px 20px 10px black;
 }
