--- a/src/styling/summary.css
+++ b/src/styling/summary.css
@@ -1,10 +1,84 @@
-.summary {
+.summary-container {
+  display: flex;
+  flex-direction: row;
+}
+
+.row {
+  display: flex;
+  flex-direction: row;
+}
+
+.column {
   display: flex;
   flex-direction: column;
+  padding-left: 50px;
+}
+
+.summary-card {
+  width: 50%;
+  height: 20%;
+  box-shadow: -4px -7px 20px 10px black;
+}
+
+.title {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
 }
 
 .title-left {
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
+  align-items: center;
+}
 
+.title-right {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+}
+
+.stage {
+  margin: -22px;
+}
+
+.hp {
+  margin: 10px;
+}
+
+.line {
+  padding-top: 35px;
+}
+
+.price-column {
+  display: flex;
+  flex-direction: column;
+}
+
+.price-row {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
+
+.ability {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+.weakness {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
+}
+
+.rarity {
+  display: flex;
+  flex-direction: row;
+}
+
+.rarity-column {
+  padding-left: 50px;
 }
