--- a/src/styling/summary.css
+++ b/src/styling/summary.css
@@ -15,8 +15,8 @@
 }
 
 .summary-card {
-  width: 50%;
-  height: 20%;
+  width: 100%;
+  height: 30%;
   box-shadow: -4px -7px 20px 10px black;
 }
 
@@ -81,4 +81,37 @@
 
 .rarity-column {
   padding-left: 50px;
+}
+
+.set-img {
+  width: 50%;
+}
+
+.flavor {
+  color: rgb(110, 110, 110);
+}
+
+.purple {
+  color: purple;
+  font-size: 25px;
+}
+
+.green {
+  color: green;
+  font-size: 25px;
+}
+
+.blue {
+  color: blue;
+  font-size: 25px;
+}
+
+.red {
+  color: red;
+  font-size: 25px;
+}
+
+.buy {
+  font-weight: bolder;
+  text-decoration: none;
 }
