--- a/src/styling/nav.css
+++ b/src/styling/nav.css
@@ -1,4 +1,143 @@
 .navbar {
+  background-color: red;
+  height: 80px;
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  width: 100%;
+}
+
+.menu-bars {
+  margin-left: 0rem;
+  font-size: 2rem;
+  background: none;
+}
+
+.nav-menu {
+  background-color: black;
+  width: 250px;
+  height: 100vh;
+  display: flex;
+  align-items: flex-start;
+  position: fixed;
+  top: 0;
+  left: -100%;
+  transition: 850ms;
+  z-index: 999;
+}
+
+.nav-menu.active {
+  left: 0;
+  transition: 350ms;
+}
+
+.nav-text {
+  display: flex;
+  justify-content: flex-start;
+  align-items: left;
+  padding: 8px 0px 8px 16px;
+  list-style: none;
+  height: 60px;
+  color: white;
+}
+
+.nav-text-red {
+  color: red;
+  list-style: none;
+}
+
+.nav-text a {
+  text-decoration: none;
+  color: white;
+  font-size: 18px;
+  width: 95%;
+  height: 100%;
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  padding: 0 16px;
+  border-radius: 4px;
+}
+
+.nav-text button {
+  text-decoration: none;
+  color: white;
+  font-size: 18px;
+  width: 95%;
+  height: 100%;
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  padding: 0 16px;
+  background: none;
+  border: none;
+  border-radius: 4px;
+}
+
+.nav-text a:hover {
+  background-color: red;
+}
+
+.nav-text button:hover {
+  background-color: red;
+}
+
+.navbar-toggle a:hover {
+  background-color: red;
+  border-radius: 4px;
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+}
+
+.menu-bars:hover {
+  text-decoration: none;
+  color: black;
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  border-radius: 4px;
+  cursor: pointer;
+}
+
+.nav-menu-items {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: center;
+}
+
+.nav-menu-items li {
+  margin: 5px 0;
+  font-size: 18px;
+}
+
+.navbar-toggle {
+  width: 100%;
+  height: 80px;
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+}
+
+span {
+  margin-left: 16px;
+}
+
+.link-style {
   display: flex;
   justify-content: space-evenly;
+  width: 100%;
+}
+.link-style,
+a {
+  color: white;
+  text-decoration: none;
+}
+
+a {
+  padding: 10px 25px;
+  background: transparent;
+  outline: none;
+  cursor: pointer;
 }
