--- a/src/styling/card.css
+++ b/src/styling/card.css
@@ -6,9 +6,12 @@
 }
 
 .card-image:hover {
-  box-shadow: -4px -7px 20px 10px white;
+    transform: translateY(-10px);
+    box-shadow: 2px 15px 10px 5px rgba(0, 0, 0, 0.5);
+    transition-duration: .3s;
+    transition-property: transform, box-shadow;
 }
 
 .card-image {
-  box-shadow: -4px -7px 20px 10px black;
+  box-shadow: 2px 5px 10px 0px black;
 }
