--- a/src/styling/nav.css
+++ b/src/styling/nav.css
@@ -2,7 +2,7 @@
   background-color: red;
   height: 80px;
   display: flex;
-  justify-content: flex-start;
+  justify-content: flex-end;
   align-items: center;
   width: 100%;
 }
@@ -15,20 +15,20 @@
 
 .nav-menu {
   background-color: black;
-  width: 250px;
-  height: 100vh;
+  width: 100%;
+  height: 30vh;
   display: flex;
   align-items: flex-start;
   position: fixed;
-  top: 0;
+  top: 80px;
   left: -100%;
-  transition: 850ms;
+  transition: 0ms;
   z-index: 999;
 }
 
 .nav-menu.active {
   left: 0;
-  transition: 350ms;
+  transition: 0ms;
 }
 
 .nav-text {
@@ -39,6 +39,11 @@
   list-style: none;
   height: 60px;
   color: white;
+}
+
+.searchBar {
+  padding-left: 30px;
+  padding-bottom: 20px;
 }
 
 .nav-text-red {
@@ -105,6 +110,7 @@
   flex-direction: column;
   justify-content: flex-start;
   align-items: center;
+  margin-top: -6px;
 }
 
 .nav-menu-items li {
