--- a/src/styling/home.css
+++ b/src/styling/home.css
@@ -38,6 +38,7 @@
   margin: 0 auto;
   left: 0;
   right: 0;
+  border-radius: 40px;
 }
 
 .blastoise {
@@ -45,6 +46,7 @@
   margin: 0 auto;
   left: -310px;
   right: 0;
+  border-radius: 40px;
 }
 
 .venusaur {
@@ -52,5 +54,6 @@
   margin: 0 auto;
   left: 0;
   right: -310px;
+  border-radius: 40px;
 }
 
