--- a/src/index.css
+++ b/src/index.css
@@ -2,8 +2,8 @@ html,
 body,
 #root {
   background-color: solid white;
-  height: 100%;
-  width: 100%;
+  height: auto;
+  width: auto;
   margin: 0;
   padding: 0;
   overflow-x: hidden;
