home.css aligned items center -nav.css added position absolute -pagination.css button styling and on hober styling

--- a/src/styling/nav.css
+++ b/src/styling/nav.css
@@ -19,10 +19,10 @@
   height: 30vh;
   display: flex;
   align-items: flex-start;
-  position: fixed;
+  position: absolute;
   top: 80px;
   left: -100%;
-  transition: 0ms;
+  transition: 0ms;  
   z-index: 999;
 }
 
