--- a/src/styling/nav.css
+++ b/src/styling/nav.css
@@ -1,10 +1,17 @@
 .navbar {
-  background-color: red;
-  height: 80px;
+  background-color: rgb(245, 239, 239);
+  max-height: 100px;
   display: flex;
-  justify-content: flex-end;
-  align-items: center;
+  flex-shrink: 0;
+  min-height: 3.25rem;
+  align-items: stretch;
   width: 100%;
+}
+
+.left-container {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
 }
 
 .menu-bars {
@@ -14,16 +21,17 @@
 }
 
 .nav-menu {
-  background-color: black;
+  background-color: rgb(245, 239, 239);
   width: 100%;
   height: 30vh;
   display: flex;
   align-items: flex-start;
   position: absolute;
-  top: 80px;
+  top: 100px;
   left: -100%;
   transition: 0ms;  
   z-index: 999;
+  justify-content: center;
 }
 
 .nav-menu.active {
@@ -38,22 +46,21 @@
   padding: 8px 0px 8px 16px;
   list-style: none;
   height: 60px;
-  color: white;
+  color: black;
 }
 
 .searchBar {
-  padding-left: 30px;
   padding-bottom: 20px;
 }
 
 .nav-text-red {
-  color: red;
+  color: white;
   list-style: none;
 }
 
 .nav-text a {
   text-decoration: none;
-  color: white;
+  color: black;
   font-size: 18px;
   width: 95%;
   height: 100%;
@@ -80,15 +87,15 @@
 }
 
 .nav-text a:hover {
-  background-color: red;
+  color: rgb(112, 112, 112);
 }
 
 .nav-text button:hover {
-  background-color: red;
+  background-color: rgb(204, 204, 204);
 }
 
 .navbar-toggle a:hover {
-  background-color: red;
+  background-color: rgb(204, 204, 204);
   border-radius: 4px;
   display: flex;
   justify-content: flex-start;
@@ -111,6 +118,8 @@
   justify-content: flex-start;
   align-items: center;
   margin-top: -6px;
+  list-style: none;
+  padding: 0;
 }
 
 .nav-menu-items li {
@@ -137,7 +146,7 @@ span {
 }
 .link-style,
 a {
-  color: white;
+  color: black;
   text-decoration: none;
 }
 
@@ -146,4 +155,9 @@ a {
   background: transparent;
   outline: none;
   cursor: pointer;
+}
+
+.nav-img {
+  width: 50%;
+  height: 50%;
 }
