--- a/src/styling/summary.css
+++ b/src/styling/summary.css
@@ -57,18 +57,38 @@
 }
 
 .line {
-  padding-top: 35px;
+  padding-top: 10px;
 }
 
 .price-column {
   display: flex;
   flex-direction: column;
+  margin: 5px;
+}
+
+.price-top {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  margin: 0;
 }
 
 .price-row {
   display: flex;
   flex-direction: row;
-  justify-content: space-between;
+  padding-left: 10px;
+  width: 70%;
+  font-size: 15px;
+}
+
+.prices-header {
+  padding-left: 20px;
+  margin: 0;
+}
+
+.updated-header {
+  padding-left: 20px;
+  margin: 0;
 }
 
 .ability {
@@ -103,25 +123,30 @@
 
 .purple {
   color: purple;
-  font-size: 25px;
+  font-size: 15px;
+  margin: 0;
 }
 
 .green {
   color: green;
-  font-size: 25px;
+  font-size: 15px;
+  margin: 0;
 }
 
 .blue {
   color: blue;
-  font-size: 25px;
+  font-size: 15px;
+  margin: 0;
 }
 
 .red {
   color: red;
-  font-size: 25px;
+  font-size: 15px;
+  margin: 0;
 }
 
 .buy {
   font-weight: bolder;
   text-decoration: none;
+  padding-left: 20px;
 }
