--- a/src/styling/summary.css
+++ b/src/styling/summary.css
@@ -13,7 +13,6 @@
 .column {
   display: flex;
   flex-direction: column;
-  padding-left: 50px;
 }
 
 .summary-card {
@@ -26,7 +25,6 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  padding-right: 50px;
 }
 
 .title-left {
@@ -91,11 +89,13 @@
   margin: 0;
 }
 
-.ability {
+.ability, .attacks {
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  width: 80%;
+  padding-left: 20px;
 }
 
 .weakness {
@@ -104,9 +104,22 @@
   justify-content: space-evenly;
 }
 
+.weakness-column {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+}
+
+.weakness-row {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+}
+
 .rarity {
   display: flex;
   flex-direction: row;
+  justify-content: center;
 }
 
 .rarity-column {
@@ -119,6 +132,9 @@
 
 .flavor {
   color: rgb(110, 110, 110);
+  width: 80%;
+  font-size: 15px;
+  padding-left: 10px;
 }
 
 .purple {
