--- a/src/styling/summary.css
+++ b/src/styling/summary.css
@@ -138,25 +138,25 @@
 }
 
 .purple {
-  color: purple;
+  color: purple !important;
   font-size: 15px;
   margin: 0;
 }
 
 .green {
-  color: green;
+  color: green !important;
   font-size: 15px;
   margin: 0;
 }
 
 .blue {
-  color: blue;
+  color: blue !important;
   font-size: 15px;
   margin: 0;
 }
 
 .red {
-  color: red;
+  color: red !important;
   font-size: 15px;
   margin: 0;
 }
@@ -165,4 +165,8 @@
   font-weight: bolder;
   text-decoration: none;
   padding-left: 20px;
+}
+
+.buy-color {
+  color: blue !important;
 }
