--- a/src/styling/sets.css
+++ b/src/styling/sets.css
@@ -11,9 +11,14 @@
 }
 
 .set-content {
-  padding: 20px;
-  background-color: rgb(64, 64, 107);
+  width: 100%;
+  height: 100%;
+  cursor: pointer;
+  padding: 1em;
+  background-color: #fff;
   margin: 10px;
+  border-radius: 5px;
+  box-shadow: 0 0.5em 1em -0.125em rgb(10 10 10 / 10%), 0 0 0 1px rgb(10 10 10 / 2%);
 }
 
 .set-middle {
@@ -22,12 +27,13 @@
 
 .set-middle-column {
   display: flex;
+  flex-direction: column;
   justify-content: center;
-  padding-top: 10px;
 }
 
-.set-img {
-  width: 100%;
+.sets-img {
+  max-width: 100%;
+  max-height: 100%;
 }
 
 .set-logo {
@@ -41,8 +47,33 @@
 
 }
 
+.figure-img {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding-top: 15px;
+  height: 140px;
+}
+
 .figure-logo {
   margin: 15px;
-  width: 80px;
-  height: 80px;
+  width: 48px;
+  height: 48px;
+}
+
+.battle {
+  font-weight: 400;
+  font-size: 1.5rem;
+  color: black;
+}
+
+.released {
+  margin-top: -1.25rem;
+  font-size: 1rem;
+  color: black;
+}
+
+.legalities-style {
+  margin-left: 2em;
+  margin-top: 1em;
 }
