--- a/src/styling/themes.css
+++ b/src/styling/themes.css
@@ -37,7 +37,30 @@ body.theme h2,
 body.theme h3,
 body.theme h4,
 body.theme h5,
-body.theme h6 {
+body.theme h6,
+body.theme .menu-bars {
   color: #999;
   transition: color 0.25s ease-in-out;
+}
+
+body.theme .battle,
+body.theme .legalities-style {
+  color:#c9d1d9;
+}
+
+body.theme .released {
+  color: #818a93;
+}
+
+body.theme .set-content {
+  background-color: #252f3f;
+}
+
+body.theme .sets-container {
+  background-color: #1a202c;
+}
+
+body.theme .navbar,
+body.theme .nav-menu.active {
+  background-color: #161b22;
 }
