--- a/src/styling/nav.css
+++ b/src/styling/nav.css
@@ -22,9 +22,9 @@
 }
 
 .nav-menu {
-  background-color: rgb(245, 239, 239);
+  background-color: #fff;
   width: 100%;
-  height: 30vh;
+  height: 60vh;
   display: flex;
   align-items: flex-start;
   position: absolute;
