--- a/src/styling/sets.css
+++ b/src/styling/sets.css
@@ -6,8 +6,10 @@
 
 .set-container {
   display: flex;
+  flex-direction: column;
   align-items: center;
   justify-content: center;
+  margin: 1.5rem 1rem;
 }
 
 .set-content {
@@ -76,4 +78,11 @@
 .legalities-style {
   margin-left: 2em;
   margin-top: 1em;
+}
+
+.set-title {
+  color: black;
+  font-size: 2rem;
+  font-weight: 600;
+  line-height: 1.125;
 }
