--- a/src/styling/nav.css
+++ b/src/styling/nav.css
@@ -1,11 +1,12 @@
 .navbar {
-  background-color: rgb(245, 239, 239);
+  background-color: #fff;
   max-height: 100px;
   display: flex;
   flex-shrink: 0;
   min-height: 3.25rem;
   align-items: stretch;
   width: 100%;
+  box-shadow: 0 0.5em 1em -0.125em rgb(10 10 10 / 10%), 0 0 0 1px rgb(10 10 10 / 2%);
 }
 
 .left-container {
@@ -21,9 +22,9 @@
 }
 
 .nav-menu {
-  background-color: rgb(245, 239, 239);
+  background-color: #fff;
   width: 100%;
-  height: 30vh;
+  height: 60vh;
   display: flex;
   align-items: flex-start;
   position: absolute;
