--- a/src/styling/nav.css
+++ b/src/styling/nav.css
@@ -16,10 +16,14 @@
 }
 
 .left-container-text {
+  color: white !important;
   padding: 4px;
+  font-weight: bold;
 }
 
 .menu-bars {
+  display: flex;
+  align-items: center;
   margin-left: 0rem;
   font-size: 2rem;
   background: none;
@@ -165,4 +169,12 @@ a {
   width: 35%;
   height: auto;
   transform: scaleX(-1);
+}
+
+@media only screen and (min-width: 720px) {
+
+  .left-container-text {
+    padding: 10px;
+    color: white;
+  }
 }
