--- a/src/styling/home.css
+++ b/src/styling/home.css
@@ -58,6 +58,21 @@
   border-radius: 40px;
 }
 
+/*===================*/
+/* BOB
+/*===================*/
+@keyframes hvr-bob {
+  0%   { transform: translateY(0); }
+  50%  { transform: translateY(-1em); }
+  100% { transform: translateY(0); }
+}
+.hvr-bob:hover {
+  animation-name: hvr-bob;
+  animation-duration: 1s;
+  animation-iteration-count: infinite;
+  animation-timing-function: ease-in-out;
+}
+
 .errorMessage {
   color: red !important;
   margin: .5rem;
