--- a/src/styling/nav.css
+++ b/src/styling/nav.css
@@ -7,6 +7,7 @@
   align-items: stretch;
   width: 100%;
   box-shadow: 0 0.5em 1em -0.125em rgb(10 10 10 / 10%), 0 0 0 1px rgb(10 10 10 / 2%);
+  justify-content: space-between;
 }
 
 .left-container {
@@ -27,6 +28,7 @@
   margin-left: 0rem;
   font-size: 2rem;
   background: none;
+  padding-right: 15px;
 }
 
 .nav-menu {
@@ -159,7 +161,6 @@ a {
 }
 
 a {
-  padding: 10px 25px;
   background: transparent;
   outline: none;
   cursor: pointer;
@@ -169,6 +170,10 @@ a {
   width: 77px;
   height: auto;
   transform: scaleX(-1);
+}
+
+.price-column > h5 {
+  font-size: 11px;
 }
 
 @media only screen and (min-width: 410px) {
@@ -215,13 +220,13 @@ a {
  .price-column {
    margin: 5px;
  }
- 
- .ability {
-   width: 100% !important;
- }
 
  .ability-name {
    display: flex;
    justify-content: center;
+ }
+ 
+ .attacks-width {
+   width: 100%;
  }
 }
