--- a/src/styling/home.css
+++ b/src/styling/home.css
@@ -21,10 +21,18 @@
   background-color: white;
   z-index: 100;
   padding: 20px 0px;
+  margin-top: 100px;
+}
+
+.footer-position {
+  display: flex;
+  flex-direction: column;
+  padding: 0 20px;
+  align-items: center;
 }
 
 .tcg-link {
-  color: blue;
+  color: #3273dc;
 }
 
 .home-content .card {
@@ -35,7 +43,7 @@
 }
 
 .charizard {
-  bottom: -170px;
+  bottom: -270px;
   margin: 0 auto;
   left: 0;
   right: 0;
@@ -43,7 +51,7 @@
 }
 
 .blastoise {
-  bottom: -140px;
+  bottom: -240px;
   margin: 0 auto;
   left: -310px;
   right: 0;
@@ -51,14 +59,41 @@
 }
 
 .venusaur {
-  bottom: -140px;
+  bottom: -240px;
   margin: 0 auto;
   left: 0;
   right: -310px;
   border-radius: 40px;
 }
 
+/*===================*/
+/* BOB
+/*===================*/
+@keyframes hvr-bob {
+  0%   { transform: translateY(0); }
+  50%  { transform: translateY(-1em); }
+  100% { transform: translateY(0); }
+}
+.hvr-bob:hover {
+  animation-name: hvr-bob;
+  animation-duration: 1s;
+  animation-iteration-count: infinite;
+  animation-timing-function: ease-in-out;
+}
+
 .errorMessage {
   color: red !important;
   margin: .5rem;
+}
+
+.title-home {
+  color: white !important;
+}
+
+.footer-text {
+  line-height: 1.5rem;
+}
+
+.search-by {
+  padding-bottom: 1rem;
 }
