--- a/src/styling/summary.css
+++ b/src/styling/summary.css
@@ -13,6 +13,7 @@
 .column {
   display: flex;
   flex-direction: column;
+  padding: 0 20px;
 }
 
 .summary-card {
@@ -62,6 +63,8 @@
   display: flex;
   flex-direction: column;
   margin: 5px;
+  flex: 1;
+  justify-content: space-between;
 }
 
 .price-top {
@@ -74,18 +77,17 @@
 .price-row {
   display: flex;
   flex-direction: row;
-  padding-left: 10px;
-  width: 70%;
+  width: 100%;
   font-size: 15px;
 }
 
 .prices-header {
-  padding-left: 20px;
+  
   margin: 0;
 }
 
 .updated-header {
-  padding-left: 20px;
+  
   margin: 0;
 }
 
@@ -94,8 +96,7 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  width: 80%;
-  padding-left: 20px;
+  width: 100%;
 }
 
 .weakness {
@@ -104,17 +105,14 @@
   justify-content: space-evenly;
 }
 
-.weakness-column {
+.weakness-column, .weakness-row {
   display: flex;
   flex-direction: column;
   justify-content: space-evenly;
+  flex: 1;
 }
 
-.weakness-row {
-  display: flex;
-  flex-direction: column;
-  justify-content: space-evenly;
-}
+
 
 .rarity {
   display: flex;
@@ -123,7 +121,7 @@
 }
 
 .rarity-column {
-  padding-left: 50px;
+  flex: 1;
 }
 
 .set-img {
@@ -138,25 +136,25 @@
 }
 
 .purple {
-  color: purple !important;
+  color: #824c95 !important;
   font-size: 15px;
   margin: 0;
 }
 
 .green {
-  color: green !important;
+  color: #48c774 !important;
   font-size: 15px;
   margin: 0;
 }
 
 .blue {
-  color: blue !important;
+  color: #3273dc !important;
   font-size: 15px;
   margin: 0;
 }
 
 .red {
-  color: red !important;
+  color: #f14668 !important;
   font-size: 15px;
   margin: 0;
 }
@@ -164,9 +162,14 @@
 .buy {
   font-weight: bolder;
   text-decoration: none;
-  padding-left: 20px;
+ 
 }
 
 .buy-color {
-  color: blue !important;
+  color: #3273dc !important;
+}
+
+.flavor-container {
+  display: flex;
+  justify-content: center;
 }
