Revert "Media query (#30)"
This reverts commit 06fabee4fe06f01e1090b597df4260e7438aa2c5.

--- a/src/styling/themes.css
+++ b/src/styling/themes.css
@@ -24,6 +24,7 @@
 
 body.theme,
 body.theme .navbar,
+body.theme .nav-menu.active,
 body.theme .home-footer {
   background-color: #1a1919;
   color: #999;
