--- a/src/styling/summary.css
+++ b/src/styling/summary.css
@@ -13,7 +13,6 @@
 .column {
   display: flex;
   flex-direction: column;
-  padding: 0 20px;
 }
 
 .summary-card {
@@ -63,8 +62,6 @@
   display: flex;
   flex-direction: column;
   margin: 5px;
-  flex: 1;
-  justify-content: space-between;
 }
 
 .price-top {
@@ -77,17 +74,18 @@
 .price-row {
   display: flex;
   flex-direction: row;
-  width: 100%;
+  padding-left: 10px;
+  width: 70%;
   font-size: 15px;
 }
 
 .prices-header {
-  
+  padding-left: 20px;
   margin: 0;
 }
 
 .updated-header {
-  
+  padding-left: 20px;
   margin: 0;
 }
 
@@ -96,7 +94,8 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  width: 100%;
+  width: 80%;
+  padding-left: 20px;
 }
 
 .weakness {
@@ -105,14 +104,17 @@
   justify-content: space-evenly;
 }
 
-.weakness-column, .weakness-row {
+.weakness-column {
   display: flex;
   flex-direction: column;
   justify-content: space-evenly;
-  flex: 1;
 }
 
-
+.weakness-row {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+}
 
 .rarity {
   display: flex;
@@ -121,7 +123,7 @@
 }
 
 .rarity-column {
-  flex: 1;
+  padding-left: 50px;
 }
 
 .set-img {
@@ -136,25 +138,25 @@
 }
 
 .purple {
-  color: #824c95 !important;
+  color: purple !important;
   font-size: 15px;
   margin: 0;
 }
 
 .green {
-  color: #48c774 !important;
+  color: green !important;
   font-size: 15px;
   margin: 0;
 }
 
 .blue {
-  color: #3273dc !important;
+  color: blue !important;
   font-size: 15px;
   margin: 0;
 }
 
 .red {
-  color: #f14668 !important;
+  color: red !important;
   font-size: 15px;
   margin: 0;
 }
@@ -162,14 +164,9 @@
 .buy {
   font-weight: bolder;
   text-decoration: none;
- 
+  padding-left: 20px;
 }
 
 .buy-color {
-  color: #3273dc !important;
-}
-
-.flavor-container {
-  display: flex;
-  justify-content: center;
+  color: blue !important;
 }
