--- a/src/styling/about.css
+++ b/src/styling/about.css
@@ -20,3 +20,9 @@
   color: blue;
   padding: 0;
 }
+
+@media only screen and (min-width: 1024px) {
+  .about-container  {
+    padding-top: 25%;
+  }
+}
