--- a/src/styling/results.css
+++ b/src/styling/results.css
@@ -14,3 +14,12 @@
   margin: 1rem;
   font-size: 20px;
 }
+
+@media only screen and (min-width: 1024px) {
+  .wrap-results {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+  }
+
+}
