--- a/src/styling/summary.css
+++ b/src/styling/summary.css
@@ -99,19 +99,16 @@
   width: 100%;
 }
 
-.weakness {
+.weakness-row {
   display: flex;
   flex-direction: row;
-  justify-content: space-evenly;
+  flex-wrap: wrap;
 }
 
-.weakness-column, .weakness-row {
-  display: flex;
-  flex-direction: column;
-  justify-content: space-evenly;
-  flex: 1;
+.weakness-content {
+  flex: 1 0 100px;
+  margin: 0 5px;
 }
-
 
 
 .rarity {
@@ -167,9 +164,108 @@
 
 .buy-color {
   color: #3273dc !important;
+  margin: 0;
 }
 
 .flavor-container {
   display: flex;
   justify-content: center;
+}
+
+.attacks-space {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+/* @media only screen and (min-width: 320px) {
+  .summary-container {
+    margin-top: -50px;
+    flex-direction: row;
+  }
+
+  .summary-card {
+    width: auto;
+    height: 342px;
+    padding: 40px 100px 0 40px;
+    box-shadow: none;
+  }
+
+  .row {
+    flex-direction: row;
+    align-items: normal;
+  }
+
+  .title {
+    flex-direction: row;
+    justify-content: space-between;
+  }
+
+  .ability-width {
+    width: 100%;
+  }
+
+  .flavor {
+    width: 100%;
+    padding-left: 0;
+  }
+
+  .cardName {
+    width: 100%;
+    margin: 0;
+  }
+
+  .weakness-content {
+    flex: 1 0 25%;
+  }
+
+  .weakness-content p {
+    font-size: 20px;
+  }
+} */
+
+@media only screen and (min-width: 700px) {
+  .summary-container {
+    margin-top: -50px;
+    flex-direction: row;
+  }
+
+  .summary-card {
+    width: auto;
+    height: 330px;
+    padding: 40px 100px 0 40px;
+    box-shadow: none;
+  }
+
+  .row {
+    flex-direction: row;
+    align-items: normal;
+  }
+
+  .title {
+    flex-direction: row;
+    justify-content: space-between;
+  }
+
+  .ability-width {
+    width: 100%;
+  }
+
+  .flavor {
+    width: 100%;
+    padding-left: 0;
+  }
+
+  .cardName {
+    width: 100%;
+    margin: 0;
+  }
+
+  .weakness-content {
+    flex: 1 0 25%;
+  }
+
+  .weakness-content p {
+    font-size: 20px;
+  }
 }
