--- a/src/styling/home.css
+++ b/src/styling/home.css
@@ -98,6 +98,12 @@
   padding-bottom: 1rem;
 }
 
+.search-style {
+  border-radius: 5px;
+  height: 25px;
+  font-size: 15px;
+}
+
 @media only screen and (min-width: 1024px) {
   .home-footer {
     margin-top: 210px;
