--- a/src/styling/pagination.css
+++ b/src/styling/pagination.css
@@ -6,15 +6,21 @@
 
 .button-styling {
   display: flex;
-  text-decoration: none;
-  padding: 5px;
   border-radius: 5px;
-  color: white;
-  border: none;
+  height: 25px;
+  width: 25px;
+  font-size: 15px;
+  align-items: center;
+  justify-content: center;
+  background-color: #c9c9c9;
 }
 
 .button-styling:hover {
   background-color: rgb(196, 196, 196);
+}
+
+.current-page-button {
+  background-color: #5f5f5f;
 }
 
 .page-number {
