--- a/src/styling/themes.css
+++ b/src/styling/themes.css
@@ -72,7 +72,7 @@ body.theme .home-container {
   background-color: #1a202c !important;
 }
 
-body.theme .column p, .column h3, .column h1, .column h4, .column h6, .dark-mode-style {
+body.theme .column p, .column h3, .column h1, .column h4, .column h6 {
   color: #c9d1d9 !important;
 }
 
