--- a/src/styling/home.css
+++ b/src/styling/home.css
@@ -70,9 +70,15 @@
 /* BOB
 /*===================*/
 @keyframes hvr-bob {
-  0%   { transform: translateY(0); }
-  50%  { transform: translateY(-1em); }
-  100% { transform: translateY(0); }
+  0% {
+    transform: translateY(0);
+  }
+  50% {
+    transform: translateY(-1em);
+  }
+  100% {
+    transform: translateY(0);
+  }
 }
 .hvr-bob:hover {
   animation-name: hvr-bob;
@@ -83,7 +89,7 @@
 
 .errorMessage {
   color: red !important;
-  margin: .5rem;
+  margin: 0.5rem;
 }
 
 .title-home {
@@ -109,7 +115,8 @@
     margin-top: 210px;
   }
 
-  .blastoise, .venusaur {
+  .blastoise,
+  .venusaur {
     bottom: -340px;
   }
 
