--- a/src/styling/sets.css
+++ b/src/styling/sets.css
@@ -20,14 +20,15 @@
   background-color: #fff;
   margin: 10px;
   border-radius: 5px;
-  box-shadow: 0 0.5em 1em -0.125em rgb(10 10 10 / 10%), 0 0 0 1px rgb(10 10 10 / 2%);
+  box-shadow: 0 0.5em 1em -0.125em rgb(10 10 10 / 10%),
+    0 0 0 1px rgb(10 10 10 / 2%);
   vertical-align: middle;
-  transition-duration: .3s;
+  transition-duration: 0.3s;
   transition-property: transform;
 }
 
 .set-content:hover {
- transform: scale(1.1);
+  transform: scale(1.1);
 }
 
 .set-middle {
@@ -53,7 +54,6 @@
 .set-legal {
   display: flex;
   flex-direction: column;
-
 }
 
 .figure-img {
@@ -96,24 +96,24 @@
 }
 
 @media only screen and (min-width: 1024px) {
- .set-title {
-   display: flex;
-   justify-content: center;
- }
+  .set-title {
+    display: flex;
+    justify-content: center;
+  }
 
- .set-container {
-  flex-direction: row;
-  align-items: stretch;
-  flex-wrap: wrap;
-}
+  .set-container {
+    flex-direction: row;
+    align-items: stretch;
+    flex-wrap: wrap;
+  }
 
-.set-content {
-  width: auto;
-  height: auto;
-  vertical-align: middle;
-  transition-duration: .3s;
-  transition-property: transform;
-  flex: 0 1 300px;
-  justify-content: stretch;
-}
+  .set-content {
+    width: auto;
+    height: auto;
+    vertical-align: middle;
+    transition-duration: 0.3s;
+    transition-property: transform;
+    flex: 0 1 300px;
+    justify-content: stretch;
+  }
 }
