--- a/src/styling/summary.css
+++ b/src/styling/summary.css
@@ -82,16 +82,15 @@
 }
 
 .prices-header {
-  
   margin: 0;
 }
 
 .updated-header {
-  
   margin: 0;
 }
 
-.ability, .attacks {
+.ability,
+.attacks {
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -109,7 +108,6 @@
   flex: 1 0 100px;
   margin: 0 5px;
 }
-
 
 .rarity {
   display: flex;
@@ -159,7 +157,6 @@
 .buy {
   font-weight: bolder;
   text-decoration: none;
- 
 }
 
 .buy-color {
