--- a/src/styling/themes.css
+++ b/src/styling/themes.css
@@ -6,10 +6,10 @@
 }
 
 .light-mode {
-    background-color: #fff;
-    color: #333;
-    height: 100%;
-    transition: background-color 0.25s ease-in-out;
+  background-color: #fff;
+  color: #333;
+  height: 100%;
+  transition: background-color 0.25s ease-in-out;
 }
 
 .span {
@@ -43,7 +43,7 @@ body.theme h6 {
 body.theme .battle,
 body.theme .legalities-style,
 body.theme .set-title {
-  color:#c9d1d9;
+  color: #c9d1d9;
 }
 
 body.theme .released {
@@ -64,7 +64,7 @@ body.theme .nav-menu.active {
 }
 
 body.theme .left-container-text {
-  color:  white !important;
+  color: white !important;
 }
 
 body.theme .summary-container,
@@ -72,11 +72,16 @@ body.theme .home-container {
   background-color: #1a202c !important;
 }
 
-body.theme .column p, .column h3, .column h1, .column h4, .column h6 {
+body.theme .column p,
+.column h3,
+.column h1,
+.column h4,
+.column h6 {
   color: #c9d1d9 !important;
 }
 
-body.theme .footer-text, body.theme .menu-bars {
+body.theme .footer-text,
+body.theme .menu-bars {
   color: #c9d1d9 !important;
 }
 
