--- a/src/styling/nav.css
+++ b/src/styling/nav.css
@@ -6,7 +6,8 @@
   min-height: 3.25rem;
   align-items: stretch;
   width: 100%;
-  box-shadow: 0 0.5em 1em -0.125em rgb(10 10 10 / 10%), 0 0 0 1px rgb(10 10 10 / 2%);
+  box-shadow: 0 0.5em 1em -0.125em rgb(10 10 10 / 10%),
+    0 0 0 1px rgb(10 10 10 / 2%);
   justify-content: space-between;
 }
 
@@ -35,14 +36,11 @@
   background-color: #fff;
   width: 100%;
   height: 60vh;
-  display: flex;
-  align-items: flex-start;
   position: absolute;
   top: 83px;
   left: -100%;
-  transition: 0ms;  
+  transition: 0ms;
   z-index: 999;
-  justify-content: center;
 }
 
 .nav-menu.active {
@@ -51,9 +49,6 @@
 }
 
 .nav-text {
-  display: flex;
-  justify-content: flex-start;
-  align-items: left;
   padding: 8px 0px 8px 16px;
   list-style: none;
   height: 60px;
@@ -75,11 +70,10 @@
   font-size: 18px;
   width: 95%;
   height: 100%;
-  display: flex;
-  justify-content: flex-start;
-  align-items: center;
   padding: 0 16px;
   border-radius: 4px;
+  display: flex;
+  align-items: center;
 }
 
 .nav-text button {
@@ -125,7 +119,6 @@
 .nav-menu-items {
   display: flex;
   flex-direction: column;
-  justify-content: flex-start;
   align-items: center;
   margin-top: -6px;
   list-style: none;
@@ -149,11 +142,6 @@ span {
   margin-left: 16px;
 }
 
-.link-style {
-  display: flex;
-  justify-content: space-evenly;
-  width: 100%;
-}
 .link-style,
 a {
   color: black;
@@ -177,7 +165,6 @@ a {
 }
 
 @media only screen and (min-width: 410px) {
-
   .left-container-text {
     padding: 10px;
     color: white;
@@ -193,46 +180,45 @@ a {
     height: 40vh;
   }
 
- .prices-header {
-   padding-left: 0 !important;
- }
+  .prices-header {
+    padding-left: 0 !important;
+  }
 
- .buy {
-   padding: 0;
-   padding-left: 0 !important;
- }
+  .buy {
+    padding: 0;
+    padding-left: 0 !important;
+  }
 
- .updated-header {
-   padding: 0;
-   padding-left: 0 !important;
- }
+  .updated-header {
+    padding: 0;
+    padding-left: 0 !important;
+  }
 
- .price-row {
-   padding-left: 0 !important;
-   width: auto !important;
-   justify-content: space-between;
- }
+  .price-row {
+    padding-left: 0 !important;
+    width: auto !important;
+    justify-content: space-between;
+  }
 
- .price-top {
-   margin: 5px;
- }
+  .price-top {
+    margin: 5px;
+  }
 
- .price-column {
-   margin: 5px;
- }
+  .price-column {
+    margin: 5px;
+  }
 
- .ability-name {
-   display: flex;
-   justify-content: center;
- }
- 
- .attacks-width {
-   width: 100%;
- }
+  .ability-name {
+    display: flex;
+    justify-content: center;
+  }
+
+  .attacks-width {
+    width: 100%;
+  }
 }
 
 @media only screen and (min-width: 1024px) {
-
   .menu-bars {
     display: none;
   }
@@ -257,6 +243,4 @@ a {
     padding: 10px;
     justify-content: flex-end;
   }
-
 }
-
