--- a/src/styling/about.css
+++ b/src/styling/about.css
@@ -23,6 +23,7 @@
 
 @media only screen and (min-width: 1024px) {
   .about-container {
-    padding-top: 25%;
+    display: flex;
+    align-items: center;
   }
 }
