--- a/src/styling/pagination.css
+++ b/src/styling/pagination.css
@@ -13,14 +13,15 @@
   align-items: center;
   justify-content: center;
   background-color: #c9c9c9;
+  border: none;
 }
 
 .button-styling:hover {
-  background-color: rgb(196, 196, 196);
+  opacity: 0.1;
 }
 
 .current-page-button {
-  background-color: #5f5f5f;
+  background-color: #757575;
 }
 
 .page-number {
